--- a/src/components/searchBar/searchBar.module.scss
+++ b/src/components/searchBar/searchBar.module.scss
@@ -1,25 +1,40 @@
-.searchBar {
+.searchBar_container {
   margin: 0 auto;
   max-width: 600px;
   display: flex;
   justify-content: center;
 }
 
-.searchBar_input {
+.searchBar {
+  position: relative;
   width: 80%;
-  margin: 2%;
-  padding: 0.25rem 5%;
+  margin: 2% 0;
+  height: 2.5rem;
 
+  display: flex;
+  justify-content: center;
+}
+
+.searchBar_input {
+  width: 100%;
+  padding: 0 0 0 5%;
   border-radius: 1.5rem;
   border: 1px solid black;
 
-  font-size: 2rem;
+  font-size: 1.2rem;
+  font-family: var(--font-primary);
+  font-weight: 500;
+}
 
-  transition: 300ms;
+.searchBar_button {
+  position: absolute;
+  right: 2%;
 
-  &:focus {
-    width: 100%;
+  height: 100%;
+  aspect-ratio: 1;
 
-    border-radius: 1rem;
+  img {
+    width: 66%;
+    height: 66%;
   }
 }
