--- a/src/components/searchBar/searchBar.module.scss
+++ b/src/components/searchBar/searchBar.module.scss
@@ -19,11 +19,19 @@
   width: 100%;
   padding: 0 0 0 5%;
   border-radius: 1.5rem;
-  border: 1px solid black;
+  border: 1px solid var(--color-dark);
 
   font-size: 1.2rem;
   font-family: var(--font-primary);
   font-weight: 500;
+
+  background-color: var(--color-light);
+
+  transition: 300ms;
+
+  &:focus {
+    border: 1px solid var(--color-highlight);
+  }
 }
 
 .searchBar_button {
@@ -33,8 +41,12 @@
   height: 100%;
   aspect-ratio: 1;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   img {
-    width: 66%;
-    height: 66%;
+    width: 60%;
+    height: 60%;
   }
 }
