--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,6 +3,10 @@
 @import "./reset";
 @import "./variables";
 
+html {
+  font-size: 16px;
+}
+
 body {
   font-family: var(--font-primary);
   background-color: var(--color-light);
