--- a/src/components/ui/Card.module.scss
+++ b/src/components/ui/Card.module.scss
@@ -1,6 +1,7 @@
 .Card {
-  width: 500px;
-  height: 700px;
+  margin: 0 auto;
+  width: 350px;
+  height: 500px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
