--- a/src/components/weatherCard/WeatherCard.module.scss
+++ b/src/components/weatherCard/WeatherCard.module.scss
@@ -1,6 +1,6 @@
 .cityName {
-  margin-top: 10%;
-  font-size: 4rem;
+  margin: 10% 0;
+  font-size: 3.5rem;
   font-weight: bold;
   color: var(--color-light);
 }
@@ -12,7 +12,7 @@
 }
 
 .temperature {
-  font-size: 6rem;
+  font-size: 4.5rem;
   font-weight: bold;
   color: var(--color-light);
 }
